--- a/package.json
+++ b/package.json
@@ -1,29 +1,18 @@
 {
   "name": "otime-discovery",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "ng serve",
-    "build": "ng build",
-    "preview": "ng serve --configuration=production"
-  },
+  "description": "Smart timezone converter powered by Gemini",
   "dependencies": {
-    "rxjs": "^7.8.2",
-    "@google/genai": "^1.34.0",
-    "@angular/platform-browser": "^21.0.0",
+    "@angular/common": "^21.0.6",
+    "@angular/compiler": "^21.0.6",
+    "@angular/core": "^21.0.6",
     "@angular/forms": "^21.0.6",
-    "@angular/common": "^21.0.0",
-    "@angular/compiler": "^21.0.0",
-    "@angular/core": "^21.0.0",
-    "@angular/build": "^21.0.0",
-    "@angular/cli": "^21.0.0",
-    "@angular/compiler-cli": "^21.0.0",
-    "tailwindcss": "latest"
+    "@angular/platform-browser": "^21.0.6",
+    "@google/genai": "^1.34.0",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "typescript": "5.9.0"
   }
 }
